# emoseum-AI

./: .env.example  .gitignore  .nixpacks.toml  .python-version  =2023.2.0  Dockerfile  README.md  config.py  feedback.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_api.py  test_colab_integration.py  test_env_variables.py  test_goEmotions.py  test_improved_evaluators.py  therapy_system.py  webhook_client.py
api/: __init__.py  config.py  dependencies.py  main.py  middleware.py
api/database/: __init__.py  collections.py  connection.py
api/models/: __init__.py  assessment.py  common.py  gallery.py  therapy.py  training.py  user.py
api/routers/: __init__.py  admin.py  assessment.py  auth.py  diary_sync.py  gallery.py  psychometric.py  system.py  therapy.py  training.py  users.py
api/services/: __init__.py  database.py  diary_exploration_service.py  emoseum_client.py  emotion_service.py  image_service.py  supabase_uploader.py  therapy_service.py
api/utils/: __init__.py  auth.py  exceptions.py
cli/: __init__.py  feedback_cli.py  main.py
config/: __init__.py  gpt_prompts.yaml  safety_rules.yaml  settings.py
core/: __init__.py  therapy_system.py
models/: __init__.py  emotion_mapper.py  lora_manager.py  reward_model.py  user_profile.py
prompt_test/: generated_prompt.txt
src/: __init__.py  act_therapy_system.py  config.py  curator_message.py  dependencies.py  gallery_manager.py  personalization_manager.py  prompt_architect.py  user_manager.py
src/ai/: __init__.py  curator_gpt.py  docent_gpt.py  personalization_manager.py  prompt_engineer.py
src/config/: __init__.py  logging_config.py  settings.py
src/core/: __init__.py  act_therapy_system.py  act_therapy_system_fix.py  ai_json_sync.py  docent_sync.py  therapy_system.py
src/database/: __init__.py  mongodb_client.py
src/managers/: __init__.py  gallery_manager.py  personalization_manager.py  user_manager.py
src/models/: __init__.py  adaptive_personalization.py  (+7 more)
templates/: index.html
tests/: __init__.py  colab_server.ipynb  colab_server.py  test.py
tools/: backup_sqlite_data.py  migrate_to_mongodb.py
training/: __init__.py  draft_trainer.py  lora_trainer.py
utils/: __init__.py  database.py
(+22 files in other folders)
